--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,4 +24,4 @@ jobs:
         run: npm install -g @devcontainers/cli
 
       - name: "Test ${{ matrix.features }}"
-        run: devcontainer features test ${{ matrix.features }}
+        run: devcontainer features test -f ${{ matrix.features }}
