--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,6 +14,8 @@ jobs:
         features:
           - chezmoi
           - clojure
+          - cuelang
+          - hof
           - puppet
           - rbw
           - restish
