add: bitwarden-ssh-agent

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - bitwarden-ssh-agent
           - chezmoi
           - clojure
           - cuelang
