--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,6 +17,7 @@ jobs:
           - clojure
           - cuelang
           - hof
+          - mise-auto-install
           - puppet
           - rbw
           - restish
