--- a/src/mise-auto-install/devcontainer-feature.json
+++ b/src/mise-auto-install/devcontainer-feature.json
@@ -5,7 +5,9 @@
   "documentationURL": "http://github.com/bcachet/devcontainers-features/tree/main/src/mise-auto-install",
   "description": "Installs mise and runs mise install on container start",
   "options": {},
-  "installsAfter": ["ghcr.io/devcontainers-extra/features/mise"],
+  "dependsOn": {
+    "ghcr.io/devcontainers-extra/features/mise": {}
+  },
   "customizations": {
     "vscode": {
       "settings": {},
